[project]
name = "topoforge"
version = "1.0.0"
description = "Modular, high resolution terrain models for 3D printing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "trimesh",
    "pandas",
    "rasterio",
    "us",
    "pyvista",
    "networkx",
    "scipy",
    "requests"
]

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "ruff>=0.14.1",
]
